fixed small screenn compare search overflow

--- a/compare/static/compare/css/compare.css
+++ b/compare/static/compare/css/compare.css
@@ -206,11 +206,10 @@
 
 .search-item-wrapper {
     width: 100%;
-    min-height: 98.14px;
     border-radius: 6px;
     background-color: #393d41;
     box-shadow: 0px 0px 10px black;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     cursor: pointer;
     display: flex;
     flex-direction: row;
